config/app/client-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      containers:
        - name: client-app
          image: alimainfraspeak/quality-frontend-docker
          ports:
            - containerPort: 80
              protocol: TCP
