config/app/lumen-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lumen-app
  template:
    metadata:
      labels:
        app: lumen-app
    spec:
      containers:
        - name: lumen-app
          image: gcr.io/google-samples/hello-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
