config/app/npm-parser-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: npm-parser-service-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: npm-parser-service-docker
  template:
    metadata:
      labels:
        app: npm-parser-service-docker
    spec:
      containers:
        - name: npm-parser-service-docker
          image: alimainfraspeak/npm-parser-service-docker:latest
          imagePullPolicy: Always
