config/app/client-services.yml
apiVersion: v1
kind: Service
metadata:
  name: client-app
  namespace: default
spec:
  selector:
    app: client-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
