config/app/lumen-services.yml
apiVersion: v1
kind: Service
metadata:
  name: lumen-app
  namespace: default
spec:
  selector:
    app: lumen-app
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
