config/app/ingress-config.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pie.infraspeaktech.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              serviceName: lumen-app
              servicePort: 8080
    - host: pie.infraspeaktech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: client-app
              servicePort: 80
